--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Flask==0.10.1
 Flask-SQLAlchemy==2.0
+gnureadline==6.3.3
+gunicorn==19.3.0
+ipython==3.1.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
